<resources>
    <string name="app_name">Camera2API</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
    <string name="flash_light_off">Flash Light \n<b>Off</b></string>
    <string name="flash_light">Flash Light</string>
    <string name="capture_type">Capture Type</string>
    <string name="single_capture_type">Capture Type \n<b>Single</b></string>
    <string name="dual_capture_type">Capture Type \n<b>Dual</b></string>
    <string name="next">Next</string>
</resources>