<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.example.camera2api.AutoFitTextureView
        android:id="@+id/texture_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <RelativeLayout
        android:id="@+id/rl_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/tools_background"
        >
        <TextView
            android:id="@+id/tv_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:textColor="@color/black"
            android:background="@drawable/selected_background"
            android:text="@string/camera"
            android:textSize="@dimen/_12sdp"
            />
        <TextView
            android:id="@+id/tv_video"
            android:layout_toRightOf="@+id/tv_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:textColor="@color/white"
            android:text="@string/video"
            android:textSize="@dimen/_12sdp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_camera_components"
        android:layout_above="@+id/rl_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        >

        <ImageView
            android:id="@+id/iv_switch_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_switch_camera"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_50sdp"
            />
        <ImageView
            android:id="@+id/ib_capture_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_capture_photo" >

        </ImageView>
        <RelativeLayout
            android:id="@+id/rl_pause_resume_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_item"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:visibility="gone"
            >

            <ImageButton
                android:id="@+id/ib_pause_resume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_2sdp"
                android:layout_centerVertical="true"
                android:background="@drawable/round_corner"
                android:src="@drawable/ic_pause" />

            <ImageButton
                android:id="@+id/ib_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/ib_pause_resume"
                android:layout_marginLeft="@dimen/_2sdp"
                android:background="@drawable/round_corner"
                android:src="@drawable/ic_stop" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_30sdp"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/selected_background"
            android:visibility="gone"
            >
            <TextView
                android:id="@+id/tv_media_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/ic_media_count_background"
                android:gravity="center"
                android:layout_centerVertical="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_toEndOf="@+id/tv_media_count"
                android:text="@string/next"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:drawableEndCompat="@drawable/ic_save"
                android:drawablePadding="@dimen/_5sdp"
                app:drawableTint="@color/black" />

        </RelativeLayout>
        <ImageView
            android:id="@+id/iv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_faded_next_button"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_40sdp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_above="@+id/rl_camera_components"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <ImageView
            android:id="@+id/iv_capture_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_single_capture_mode_selected"
            android:padding="@dimen/_5sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_60sdp"
            />
        <RelativeLayout
            android:id="@+id/rl_zoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tools_background"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"

            >
            <TextView
                android:id="@+id/tv_1x_zoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_8sdp"
                android:paddingRight="@dimen/_8sdp"
                android:paddingTop="@dimen/_7sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:text="1x"
                android:textSize="@dimen/_8sdp"
                android:textColor="@color/black"
                android:background="@drawable/selected_background"
                />
            <TextView
                android:id="@+id/tv_2x_zoom"
                android:layout_toRightOf="@+id/tv_1x_zoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_8sdp"
                android:paddingRight="@dimen/_8sdp"
                android:paddingTop="@dimen/_7sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:text="2x"
                android:textSize="@dimen/_8sdp"
                android:textColor="@color/white"
                android:background="@drawable/tools_background"
                />
        </RelativeLayout>
        <ImageView
            android:id="@+id/iv_flash"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_flash_off_not_selected"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_60sdp"
            />

    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_setting"
        android:src="@drawable/ic_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        />

    <RelativeLayout
        android:id="@+id/rl_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_90sdp"
        android:padding="@dimen/_12sdp"
        android:background="@drawable/setting_background"
        android:visibility="gone"
        >
        <RelativeLayout
            android:id="@+id/rl_flash_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/tv_flash_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flash_light_off"
                android:textSize="@dimen/_12sdp"
                android:textColor="#D4D5D6"
                />

            <ImageView
                android:id="@+id/iv_flash_off"
                android:src="@drawable/ic_flash_off_selected"
                android:layout_toStartOf="@+id/iv_flash_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <ImageView
                android:id="@+id/iv_flash_on"
                android:src="@drawable/ic_flash_on_not_selected"
                android:layout_toStartOf="@+id/iv_auto_flash"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <ImageView
                android:id="@+id/iv_auto_flash"
                android:src="@drawable/ic_auto_flash_not_selected"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_capture_type"
            android:layout_below="@+id/rl_flash_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/tv_capture_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/single_capture_type"
                android:textColor="#D4D5D6"
                android:textSize="@dimen/_12sdp"
                />
        <ImageView
            android:id="@+id/iv_single_capture_mode"
            android:layout_toStartOf="@+id/iv_dual_capture_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_single_capture_mode_selected"
            />

        <ImageView
            android:id="@+id/iv_dual_capture_mode"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dual_capture_mode_not_selected"
            android:layout_marginStart="@dimen/_5sdp"
            />
        </RelativeLayout>


    </RelativeLayout>

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/round_corner"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/ic_white_circle"
        android:drawablePadding="@dimen/_5sdp"
        android:textSize="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/tv_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:background="@drawable/round_corner"
        android:backgroundTint="@color/red"
        android:padding="@dimen/_5sdp"
        android:drawableLeft="@drawable/ic_pause"
        android:drawablePadding="@dimen/_3sdp"
        android:text="Paused: 00:00"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/_10sdp"
        android:visibility="gone"
        />




</RelativeLayout>